# pywebgen

./: README.md  pyproject.toml
pywebgen/: __init__.py  cli.py  engine_render_template.py  generator.py  generator_templates.py  generator_templates2.py
pywebgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
